// Copyright 2021 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package cv.internal.tryjob;

option go_package = "go.chromium.org/luci/cv/internal/tryjob;tryjob";

// UpdateTryjobTask checks the status of a Tryjob and updates its Datastore
// entity, and notifies Runs which care about this Tryjob.
//
// Queue: "tryjob-update".
message UpdateTryjobTask {
  // id is the Tryjob entity datastore ID. Internal to CV.
  int64 id = 1;

  // external_id is the ID that identifies the Tryjob in the backend.
  // e.g. in the case of buildbucket, it's the build ID.
  string external_id = 2;
}
